# sbb-opendata-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: publish.yml
audits/: README.md  RISK-ACCEPTANCES.md
audits/2026-06-04-sbb-opendata-mcp/: audit-meta.json  audit-report.md  summary.json
audits/2026-06-04-sbb-opendata-mcp/findings/: F-SEC-01.md  F-SEC-02.md
docs/: RELEASING.md
src/sbb_opendata_mcp/: __init__.py  server.py
tests/: test_server.py
