[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbb-opendata-mcp"
version = "0.1.0"
description = "MCP Server for Swiss Federal Railways (SBB) open data via data.sbb.ch"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "sbb",
    "swiss-railways",
    "open-data",
    "switzerland",
    "transport",
    "opendata",
    "passenger-frequency",
    "rail-disruptions",
    "train-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sbb-opendata-mcp = "sbb_opendata_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/malkreide/sbb-opendata-mcp"
Repository = "https://github.com/malkreide/sbb-opendata-mcp"
Issues = "https://github.com/malkreide/sbb-opendata-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sbb_opendata_mcp"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.envs.default.scripts]
test = "PYTHONPATH=src pytest tests/ -v"
lint = "ruff check src/ tests/"
fmt = "ruff format src/ tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
